Prepare benchmarks suite for JDK 25